party-list-generator squishy fix

--- a/parlassets/scss/_list_generator.scss
+++ b/parlassets/scss/_list_generator.scss
@@ -109,6 +109,18 @@
 
 .party-list-generator {
   @extend %list-generator;
+
+  .analyses {
+    flex-wrap: wrap;
+    margin-bottom: 11px;
+
+    li {
+      flex: 1;
+      margin-bottom: 3px;
+      min-width: 19%;
+      &:nth-child(5) { margin-right: 0; }
+    }
+  }
 }
 
 .member-list-generator {
@@ -121,19 +133,17 @@
     }
   }
 
-  // @include respond-to(limbo) {
-    .analyses {
-      flex-wrap: wrap;
-      margin-bottom: 11px;
+  .analyses {
+    flex-wrap: wrap;
+    margin-bottom: 11px;
 
-      li {
-        flex: 1;
-        margin-bottom: 3px;
-        min-width: 19%;
-        &:nth-child(5) { margin-right: 0; }
-      }
+    li {
+      flex: 1;
+      margin-bottom: 3px;
+      min-width: 19%;
+      &:nth-child(5) { margin-right: 0; }
     }
-  // }
+  }
 }
 
 .session-list-generator {
